--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -38,26 +38,25 @@ services:
     volumes:
       - mongodb_data:/data/db
 
-  beam-processor:
-    image: python:3.11-slim
-    container_name: beam-processor
-    depends_on:
+  spark:
+    image: eclipse-temurin:17-jre-ubi9-minimal
+    container_name: spark
+    depends_on: 
       - kafka
     volumes:
       - .:/app
-      - beam_cache:/root/.cache/pip
+        #- spark_cache:/root/.cache/pip
     working_dir: /app
     environment:
       - KAFKA_BOOTSTRAP_SERVERS=kafka:29092
     command: >
       bash -c "
-        apt-get update &&
-        apt-get install -y default-jre &&
-        pip install apache-beam[kafka] kafka-python numpy apache-beam kafka-python &&
-        tail -f /dev/null
+      microdnf update -y &&
+      microdnf install -y python3 python3-pip &&
+      pip install pyspark kafka-python numpy && 
+      python3 parcel_aggregator_to_carrier.py 
       "
     restart: "no"
-
+      
 volumes:
   mongodb_data:
-  beam_cache:
