--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-apache-beam==2.69.0
+apache-beam
 attrs==25.4.0
 beartype==0.21.0
 certifi==2025.11.12
@@ -10,7 +10,6 @@ dnspython==2.8.0
 docopt==0.6.2
 fastavro==1.12.1
 fasteners==0.20
-grpcio==1.76.0
 hdfs==2.7.3
 httplib2==0.22.0
 idna==3.11
