--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,10 +87,9 @@ services:
       microdnf update -y &&
       microdnf install -y python3 python3-pip &&
       pip install pyspark kafka-python numpy &&
-      pip install psycopg2-binary &&
-      python3 insert_item_data.py &&
       python3 parcel_aggregator_to_carrier.py
       "
+      # pip install psycopg2-binary &&
     restart: "no"
 
   producer:
@@ -174,6 +173,21 @@ services:
       python api/carrier_status.py
       "
 
+  postgres_inserter:
+    image: python:3.11-slim
+    container_name: postgres_inserter
+    depends_on:
+      - postgres 
+      - mongodb
+    volumes:
+      - .:/app
+    working_dir: /app
+    command: >
+      bash -c "
+      pip install pymongo psycopg2-binary schedule numpy &&
+      python3 insert_item_data.py &&
+      python3 postgres_inserter.py
+      "
       
 volumes:
   mongodb_data:
